--- a/main.css
+++ b/main.css
@@ -1,7 +1,8 @@
 body {
-  background-color: black;
+  background-color: 181818;
   color: white;
   width: 95%;
+  font-family: 'Open Sans', sans-serif;
 }
 
 #main-image {
