--- a/main.css
+++ b/main.css
@@ -2,17 +2,31 @@ body {
   background-color: 181818;
   color: white;
   width: 95%;
-  font-family: 'Open Sans', sans-serif;
+font-family: 'Nanum Gothic', sans-serif;
+}
+
+h1 {
+  font-size: 50px;
+}
+
+a {
+  color: white;
+  text-decoration: none;
+}
+
+a:hover {
+  color: red;
+  text-decoration: none;
 }
 
 #main-image {
-  height: 100%;
+  height: 600px;
   width: 100%;
 }
 
-#main-image img {
+#main-image iframe {
   display: block;
-  max-height: 100%;
+  margin-top: 20px;
   margin: auto;
 }
 
